@@ -19,3 +19,14 @@ Index: pam/Linux-PAM/modules/pam_env/pam_env.c
  
  	/* now we try to be smart about quotes around the value,
  	   but not too smart, we can't get all fancy with escaped
+@@ -250,6 +255,10 @@
+ 
+ 	/* set the env var, if it fails, we break out of the loop */
+ 	retval = pam_putenv(pamh, key);
++	if (retval == PAM_BAD_ITEM)
++	    /* expected error from deleting a non-existent env var */
++	    retval = PAM_SUCCESS;
++
+ 	if (retval != PAM_SUCCESS) {
+ 	    D(("error setting env \"%s\"", key));
+ 	    break;
